--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "albion-killbot",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A Discord bot to display Albion Online kills/deaths in chat.",
   "main": "index.js",
   "repository": "https://github.com/agnjunio/albion-killbot.git",
@@ -8,11 +8,17 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
-    "discord.js": "^11.5.1",
+    "discord-webhook-node": "^1.0.6",
+    "discord.js": "^11.6.3",
     "dotenv": "^8.2.0",
+    "fs-extra": "^9.0.0",
     "i18n": "^0.8.5",
+    "jimp": "^0.9.6",
+    "merge-img": "^2.1.3",
     "moment": "^2.24.0",
-    "mongodb": "^3.5.3"
+    "mongodb": "^3.5.5",
+    "sharp": "^0.25.2",
+    "webhook-discord": "^3.6.0"
   },
   "scripts": {
     "start": "node index.js",
