--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
-    "discord-webhook-node": "^1.0.6",
     "discord.js": "^11.6.3",
     "dotenv": "^8.2.0",
     "fs-extra": "^9.0.0",
@@ -17,8 +16,8 @@
     "merge-img": "^2.1.3",
     "moment": "^2.24.0",
     "mongodb": "^3.5.5",
-    "sharp": "^0.25.2",
-    "webhook-discord": "^3.6.0"
+    "package.json": "^2.0.1",
+    "sharp": "^0.25.2"
   },
   "scripts": {
     "start": "node index.js",
